force-app/main/default/objects/Control_documentacion__c/Control_documentacion__c.object-meta.xml
<CustomObject>
    <label>Control documentación</label>
    <nameField>
        <label>Nombre de Control documentación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control documentaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>