force-app/main/default/objects/Control_documentacion__c/fields/Accidentes_Personales__c.field-meta.xml
<CustomField>
    <fullName>Accidentes_Personales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accidentes Personales</label>
    <type>Checkbox</type>
</CustomField>