force-app/main/default/objects/Control_documentacion__c/fields/Aporte_Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Obra_Social__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aporte Obra Social</label>
    <type>Checkbox</type>
</CustomField>