force-app/main/default/objects/Control_documentacion__c/fields/ART__c.field-meta.xml
<CustomField>
    <fullName>ART__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ART</label>
    <type>Checkbox</type>
</CustomField>