force-app/main/default/objects/Control_documentacion__c/fields/Clausula_de_no_Repeticion__c.field-meta.xml
<CustomField>
    <fullName>Clausula_de_no_Repeticion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausula de No Repetición</label>
    <type>Checkbox</type>
</CustomField>