force-app/main/default/objects/Control_documentacion__c/fields/Contribucion_Obral_Social__c.field-meta.xml
<CustomField>
    <fullName>Contribucion_Obral_Social__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contribución Obral Social</label>
    <type>Checkbox</type>
</CustomField>