force-app/main/default/objects/Control_documentacion__c/fields/Contribucion_Seguridad_Social__c.field-meta.xml
<CustomField>
    <fullName>Contribucion_Seguridad_Social__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contribución Seguridad Social</label>
    <type>Checkbox</type>
</CustomField>