force-app/main/default/objects/Control_documentacion__c/fields/Cuota_Sindical__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Sindical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuota Sindical</label>
    <type>Checkbox</type>
</CustomField>