force-app/main/default/objects/Control_documentacion__c/fields/Fecha_recepcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_recepcion__c</fullName>
    <label>Fecha recepción</label>
    <type>Date</type>
</CustomField>