force-app/main/default/objects/Control_documentacion__c/fields/Fecha_Ultimo_Control__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Control__c</fullName>
    <label>Fecha Ultimo Control</label>
    <type>Date</type>
</CustomField>