force-app/main/default/objects/Control_documentacion__c/fields/IERIC__c.field-meta.xml
<CustomField>
    <fullName>IERIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IERIC</label>
    <type>Checkbox</type>
</CustomField>