force-app/main/default/objects/Control_documentacion__c/fields/Monotributo__c.field-meta.xml
<CustomField>
    <fullName>Monotributo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monotributo</label>
    <type>Checkbox</type>
</CustomField>