force-app/main/default/objects/Control_documentacion__c/fields/Seguro_Vida_Obligatorio__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Vida_Obligatorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seguro Vida Obligatorio</label>
    <type>Checkbox</type>
</CustomField>