force-app/main/default/objects/Control_documentacion__c/validationRules/Formato_periodo.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_periodo</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(
Periodo_control_documentacion__c ,
&quot;^(\\d{2}\\-\\d{4})?$&quot;
)</errorConditionFormula>
    <errorDisplayField>Periodo_control_documentacion__c</errorDisplayField>
    <errorMessage>El formato de carga debe ser mm-yyyy</errorMessage>
</ValidationRule>