force-app/main/default/objects/Control_documentacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Periodo_control_documentacion__c</columns>
    <columns>Fecha_Ultimo_Control__c</columns>
    <columns>Observaciones__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>